# sports-cloud-api-sample-code

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
auth/: JwtCreate.java  README.md  jwt_create.R  jwt_create.js  jwt_create.py
quickstart/: README.md  cloud-api-example.py  cloudapiclient.py
registration/: register_consumer.py
timeseries_decode/: README.md  decode_time_series.py  decode_time_series_simple.py
timeseries_decode/samples/: sample_api_response_01.json  sample_api_response_02.json  sample_api_response_03.json  sample_api_response_04.json
